--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-  <script type="module" crossorigin src="/laptop-in-react/assets/index.59ca84fa.js"></script>
-  <link rel="stylesheet" href="/laptop-in-react/assets/index.68d26ff5.css">
+    <script type="module" crossorigin src="/laptop-in-react/assets/index.59ca84fa.js"></script>
+    <link rel="stylesheet" href="/laptop-in-react/assets/index.68d26ff5.css">
 </head>
 
 <body>
     <div id="root"></div>
-    
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
