--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/laptop-in-react/assets/index.59ca84fa.js"></script>
-    <link rel="stylesheet" href="/laptop-in-react/assets/index.68d26ff5.css">
+    <script type="module" crossorigin src="/assets/index.59ca84fa.js"></script>
+    <link rel="stylesheet" href="/assets/index.68d26ff5.css">
 </head>
 
 <body>
